--- a/WebShopAngularProject.Client/src/app/admin/user/user.component.html
+++ b/WebShopAngularProject.Client/src/app/admin/user/user.component.html
@@ -20,11 +20,12 @@
     <button (click)="save()">Save</button>
     <button (click)="cancel()">Cancel</button>
 </div>
-
+<br>
 <ul *ngIf="users.length > 0">
-    <li *ngFor="let user of users">
+    <div *ngFor="let user of users">
         <button (click)="edit(user)">Edit</button>
         <button (click)="delete(user)">Delete</button>
-        Username: {{user.username}} - Password: {{user.password}}, Email: {{user.email}} - Usertype: {{user.userType}}
-    </li>
+        <li>Username: {{user.username}} - Password: {{user.password}}, Email: {{user.email}} - Usertype:
+            {{user.userType}}</li>
+    </div>
 </ul>
