--- a/WebShopAngularProject.Client/src/app/app.component.html
+++ b/WebShopAngularProject.Client/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
   <a routerLink="/">Home</a>
   <a routerLink="/admin/user">Users</a>
+  <a routerLink="/admin/purchase">Purchases</a>
 </nav>
 <router-outlet></router-outlet>
