Implemented 'product' functionality

--- a/WebShopAngularProject.Client/src/app/app.component.html
+++ b/WebShopAngularProject.Client/src/app/app.component.html
@@ -2,5 +2,6 @@
   <a routerLink="/">Home</a>
   <a routerLink="/admin/user">Users</a>
   <a routerLink="/admin/purchase">Purchases</a>
+  <a routerLink="/admin/product">Products</a>
 </nav>
 <router-outlet></router-outlet>
