--- a/WebShopAngularProject.Client/src/app/admin/product/product.component.html
+++ b/WebShopAngularProject.Client/src/app/admin/product/product.component.html
@@ -1,1 +1,31 @@
-<p>product works!</p>
+<h1>Product administration</h1>
+
+<div>
+    <div>
+        <label>Product name</label>
+        <input [(ngModel)]="product.name">
+    </div>
+    <div>
+        <label>Price</label>
+        <input [(ngModel)]="product.price" type="number">
+    </div>
+    <div>
+        <label>Description</label>
+        <input [(ngModel)]="product.description">
+    </div>
+    <div>
+        <label>Stock</label>
+        <input [(ngModel)]="product.stock" type="number">
+    </div>
+    <button (click)="save()">Save</button>
+    <button (click)="cancel()">Cancel</button>
+</div>
+<br>
+<ul *ngIf="products.length > 0">
+    <div class="infoCard" *ngFor="let product of products">
+        <button (click)="edit(product)">Edit</button>
+        <button (click)="delete(product)">Delete</button>
+        Product ID: {{product.id}} - Product name: {{product.name}} - Price: {{product.price}} - Description:
+        {{product.description}} - Stock: {{product.stock}}
+    </div>
+</ul>
