--- a/WebShopAngularProject.Client/src/app/app.component.html
+++ b/WebShopAngularProject.Client/src/app/app.component.html
@@ -3,5 +3,6 @@
   <a routerLink="/admin/user">Users</a>
   <a routerLink="/admin/purchase">Purchases</a>
   <a routerLink="/admin/product">Products</a>
+  <a routerLink="/admin/category">Categories</a>
 </nav>
 <router-outlet></router-outlet>
