--- a/WebShopAngularProject.Client/src/app/app.component.html
+++ b/WebShopAngularProject.Client/src/app/app.component.html
@@ -4,5 +4,6 @@
   <a routerLink="/admin/purchase">Purchases</a>
   <a routerLink="/admin/product">Products</a>
   <a routerLink="/admin/category">Categories</a>
+  <a routerLink="/admin/game">Games</a>
 </nav>
 <router-outlet></router-outlet>
