--- a/WebShopAngularProject.Client/src/app/admin/product_types/game/game.component.html
+++ b/WebShopAngularProject.Client/src/app/admin/product_types/game/game.component.html
@@ -1,6 +1,22 @@
 <h1>Game administration</h1>
 
 <div>
+    <label>Product</label>
+    <select [(ngModel)]="game.productId" type="number">
+        <option disabled>Choose product</option>
+        <option *ngFor="let product of products" [ngValue]='product.id'>
+            {{ product.name }}
+        </option>
+    </select>
+    <div>
+        <label>Category</label>
+        <select [(ngModel)]="game.categoryId" type="number">
+            <option disabled>Choose category</option>
+            <option *ngFor="let category of categories" [ngValue]='category.id'>
+                {{ category.name }}
+            </option>
+        </select>
+    </div>
     <div>
         <label>Publisher</label>
         <input [(ngModel)]="game.publisher">
@@ -16,14 +32,6 @@
     <div>
         <label>Genre</label>
         <input [(ngModel)]="game.genre">
-    </div>
-    <div>
-        <label>Product ID</label>
-        <input [(ngModel)]="game.productId" type="number">
-    </div>
-    <div>
-        <label>Category ID</label>
-        <input [(ngModel)]="game.categoryId" type="number">
     </div>
     <button (click)="save()">Save</button>
     <button (click)="cancel()">Cancel</button>
