--- a/WebShopAngularProject.Client/src/app/admin/category/category.component.html
+++ b/WebShopAngularProject.Client/src/app/admin/category/category.component.html
@@ -1,22 +1,28 @@
-<h1>Category administration</h1>
-
-<div>
-    <div>
-        <label>Category name</label>
-        <input [(ngModel)]="category.name">
+<div class="main">
+    <h1>Category administration</h1>
+    <div class="dataForms">
+        <ul>
+            <li>
+                <label><b>Category name</b></label>
+                <input [(ngModel)]="category.name">
+            </li>
+            <li>
+                <label><b>Description</b></label>
+                <input [(ngModel)]="category.description">
+            </li>
+            <button (click)="save()">Save</button>
+            <button (click)="cancel()">Cancel</button>
+        </ul>
     </div>
-    <div>
-        <label>Description</label>
-        <input [(ngModel)]="category.description">
-    </div>
-    <button (click)="save()">Save</button>
-    <button (click)="cancel()">Cancel</button>
+    <ul class="content" *ngIf="categories.length > 0">
+        <div class="infoCard" *ngFor="let category of categories">
+            <ul>
+                <li><b>Category ID: </b>{{category.id}}</li>
+                <li><b>Category name: </b>{{category.name}}</li>
+                <li><b>Category description: </b>{{category.description}}</li>
+            </ul>
+            <button (click)="edit(category)">Edit</button>
+            <button (click)="delete(category)">Delete</button>
+        </div>
+    </ul>
 </div>
-<br>
-<ul *ngIf="categories.length > 0">
-    <div class="infoCard" *ngFor="let category of categories">
-        <button (click)="edit(category)">Edit</button>
-        <button (click)="delete(category)">Delete</button>
-        Category ID: {{category.id}} - Category name: {{category.name}} - Category description: {{category.description}}
-    </div>
-</ul>
