--- a/WebShopAngularProject.Client/src/app/admin/product/product.component.html
+++ b/WebShopAngularProject.Client/src/app/admin/product/product.component.html
@@ -1,31 +1,38 @@
-<h1>Product administration</h1>
-
-<div>
-    <div>
-        <label>Product name</label>
-        <input [(ngModel)]="product.name">
+<div class="main">
+    <h1>Product administration</h1>
+    <div class="dataForms">
+        <ul>
+            <li>
+                <label><b>Product name</b></label>
+                <input [(ngModel)]="product.name">
+            </li>
+            <li>
+                <label><b>Price</b></label>
+                <input [(ngModel)]="product.price" type="number">
+            </li>
+            <li>
+                <label><b>Description</b></label>
+                <input [(ngModel)]="product.description">
+            </li>
+            <li>
+                <label><b>Stock</b></label>
+                <input [(ngModel)]="product.stock" type="number">
+            </li>
+            <button (click)="save()">Save</button>
+            <button (click)="cancel()">Cancel</button>
+        </ul>
     </div>
-    <div>
-        <label>Price</label>
-        <input [(ngModel)]="product.price" type="number">
-    </div>
-    <div>
-        <label>Description</label>
-        <input [(ngModel)]="product.description">
-    </div>
-    <div>
-        <label>Stock</label>
-        <input [(ngModel)]="product.stock" type="number">
-    </div>
-    <button (click)="save()">Save</button>
-    <button (click)="cancel()">Cancel</button>
+    <ul class="content" *ngIf="products.length > 0">
+        <div class="infoCard" *ngFor="let product of products">
+            <ul>
+                <li><b>Product ID: </b>{{product.id}}</li>
+                <li><b>Product name: </b>{{product.name}}</li>
+                <li><b>Price: </b>{{product.price}}</li>
+                <li><b>Description: </b>{{product.description}}</li>
+                <li><b>Stock: </b>{{product.stock}}</li>
+            </ul>
+            <button (click)="edit(product)">Edit</button>
+            <button (click)="delete(product)">Delete</button>
+        </div>
+    </ul>
 </div>
-<br>
-<ul *ngIf="products.length > 0">
-    <div class="infoCard" *ngFor="let product of products">
-        <button (click)="edit(product)">Edit</button>
-        <button (click)="delete(product)">Delete</button>
-        Product ID: {{product.id}} - Product name: {{product.name}} - Price: {{product.price}} - Description:
-        {{product.description}} - Stock: {{product.stock}}
-    </div>
-</ul>
