--- a/WebShopAngularProject.Client/src/styles.css
+++ b/WebShopAngularProject.Client/src/styles.css
@@ -9,6 +9,69 @@ li{
 }
 
 .infoCard{
-    border: solid 1px;
-    margin: 10px;
+    margin:10px auto auto auto;
+    align-items: center;
+    border-radius: 5px;
+    padding: 10px;
+    width: 20%;
+    border: 1px solid;
+}
+
+.content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    text-align:left;
+    width: 75%;
+    margin: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.main>h1{
+    text-align: center;
+}
+
+.main{
+    margin: auto;
+    border-radius: 5px;
+    border: 3px;
+    border-style:solid;
+    width: 75%;
+}
+
+.dataForms{
+    margin:10px auto 10px auto;
+    display: flex;
+    justify-content: center;
+}
+
+ul{
+    width: auto;
+}
+
+li{
+    margin:5px;
+    list-style: none;
+}
+
+label {
+    width:180px;
+    float:left;
+    text-align:center;
+    padding-right:10px;
+}
+
+input, label, select {
+    border-radius: 3px;
+}
+
+button{
+    padding:5px 0 5px 0;
+    margin: 5px 0px;
+    font-size: 75%;
+    border-radius: 4px;
+    font-weight:600;
+    width: 50%;
+    text-align: center;
 }
