--- a/WebShopAngularProject.Client/src/styles.css
+++ b/WebShopAngularProject.Client/src/styles.css
@@ -76,6 +76,11 @@ ul>button, div.infoCard>button{
     text-align: center;
 }
 
+ul>button:hover, div.infoCard>button:hover{
+    cursor: pointer;
+    background-color: grey;
+}
+
 nav{
     border-bottom: 1px solid;
     background-color: grey;
