Changes to API - Added new product to be manipulated

--- a/WebShopAngularProject.Client/src/app/app.component.css
+++ b/WebShopAngularProject.Client/src/app/app.component.css
@@ -25,7 +25,7 @@ nav>a:visited{
 
 /* Dropdown Button */
 #dropbtn {
-    background-color: #333232;
+    background-color: inherit;
     padding: 16px;
     font-size: 16px;
     border: none;
